# curie

./: .gitignore  .gitmodules  README.md
curie_ws/: README.md  setup_ws.bash
curie_ws/src/: curie_aruco  curie_aruco_original
curie_ws/src/arm_control/: CMakeLists.txt  package.xml
curie_ws/src/arm_control/src/: arm_movegroup.cpp
curie_ws/src/curie_arm_controller/: CMakeLists.txt  curie_arm_controller.xml  package.xml
curie_ws/src/curie_arm_controller/config/: arm_runner.yaml
curie_ws/src/curie_arm_controller/gripper_control/: gripper_stall_guard.cpp
curie_ws/src/curie_arm_controller/hardware/: arm_controller.cpp
curie_ws/src/curie_arm_controller/hardware/include/curie_arm_controller/: arm_controller.hpp
curie_ws/src/curie_arm_controller/launch/: arm.launch.py
curie_ws/src/curie_arm_controller/movement_plans/: move_joints.cpp  move_linear.cpp  move_zig_zag.cpp
curie_ws/src/curie_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
curie_ws/src/curie_arm_moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
curie_ws/src/curie_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  view.launch.py  warehouse_db.launch.py
curie_ws/src/curie_arm_servo/: CMakeLists.txt  package.xml
curie_ws/src/curie_arm_servo/include/curie_arm_servo/: servo_antidrift.hpp
curie_ws/src/curie_arm_servo/src/: servo_antidrift.cpp
curie_ws/src/curie_aruco/: package.xml  setup.cfg  setup.py
curie_ws/src/curie_aruco/curie_aruco/: curie_aruco.py
curie_ws/src/curie_base/: CMakeLists.txt  package.xml
curie_ws/src/curie_base/include/curie_base/: base.hpp
curie_ws/src/curie_base/launch/: base.launch.py
curie_ws/src/curie_base/src/: base.cpp
curie_ws/src/curie_drive_controller/: CMakeLists.txt  curie_drive_controller.xml  package.xml
curie_ws/src/curie_drive_controller/config/: diff_controllers.yaml  mock_diffbot.ros2_control.xacro  mock_diffbot.urdf.xacro
curie_ws/src/curie_drive_controller/hardware/: drive_controller.cpp
curie_ws/src/curie_drive_controller/hardware/include/curie_drive_controller/: drive_controller.hpp
curie_ws/src/curie_drive_controller/launch/: drive.launch.py
curie_ws/src/curie_hw_control/: CMakeLists.txt  package.xml
curie_ws/src/curie_hw_control/include/curie_hw_control/: sparkmax_heartbeat.hpp  test_sparkmax.hpp
curie_ws/src/curie_hw_control/include/curie_hw_control/interfaces/: hardware.hpp  spark_hardware.hpp
curie_ws/src/curie_hw_control/interfaces/: hardware.hpp  spark_arm_hardware.cpp  spark_arm_velocity_hardware.cpp  spark_drive_hardware.cpp  spark_drive_hardware.hpp
curie_ws/src/curie_hw_control/interfaces/curie_hw_control/: hardware.hpp  spark_arm_hardware.hpp  spark_arm_velocity_hardware.hpp  spark_drive_hardware.hpp  sparks.hpp
curie_ws/src/curie_hw_control/src/: sparkmax_heartbeat.cpp  test_sparkmax.cpp
curie_ws/src/curie_key_presser/: package.xml  setup.cfg  setup.py
curie_ws/src/curie_key_presser/curie_key_presser/: arm_key_presser.py
curie_ws/src/curie_robot_description/: CMakeLists.txt  package.xml
curie_ws/src/curie_robot_description/arm/launch/: display_arm.launch.py
curie_ws/src/curie_robot_description/arm/meshes/: Baseplate_Part.STL  Forearm_Linkage.STL  Shoulder.STL  base_link.STL  bicep_Link.STL  endeffector_link.STL  jaw_link.STL  shoulder_Link.STL
curie_ws/src/curie_robot_description/arm/rviz/: arm.rviz
curie_ws/src/curie_robot_description/arm/urdf/: arm.urdf
curie_ws/src/curie_robot_description/launch/: display.launch.py
curie_ws/src/curie_robot_description/meshes/: Bicep_Linkage.STL
curie_ws/src/curie_robot_description/mock_diffbot/urdf/: mock_diffbot_description.urdf.xacro
curie_ws/src/curie_robot_description/urdf/: arm.urdf
curie_ws/src/keyboard_interfaces/: CMakeLists.txt  package.xml
curie_ws/src/keyboard_interfaces/srv/: KeyPose.srv
curie_ws/src/moveit_testing/: CMakeLists.txt  package.xml
curie_ws/src/moveit_testing/moveit_testing/: moveit_testing.cpp  moveit_testing.hpp
docs/: ARCHITECTURE.md
firmware/OBC/teensy/: enums.h  led.cpp  led.h  science.h  teensy.ino  viper_topics.h
firmware/PDP/: .project
firmware/PDP/release/: .cproject  .project  PDP.ioc
firmware/STM32 Drivers/DFRobot_RS485/: .project
foxgloveDashboard/: commands.md  linux_CAN_bridge.py
reduced_cad_model_for_software_moveit_config/: CMakeLists.txt  package.xml
reduced_cad_model_for_software_moveit_config/config/: Reduced_CAD_Model_For_Software.ros2_control.xacro  Reduced_CAD_Model_For_Software.srdf  Reduced_CAD_Model_For_Software.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz
reduced_cad_model_for_software_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/arm_moveit_config/: .setup_assistant  package.xml
ros2_ws/src/arm_moveit_config/config/: arm.urdf.xacro  joint_limits.yaml
ros2_ws/src/arm_visualizer/: CMakeLists.txt  package.xml
ros2_ws/src/arm_visualizer/launch/: display.launch.py
ros2_ws/src/arm_visualizer/urdf/: arm.urdf
utils/science_testbench/: science_testbench.py
utils/science_testbench/arduino_based_ver/: testbench_arduino.py
utils/science_testbench/arduino_based_ver/sensorvalidation/: sensorvalidation.ino
utils/science_testbench/science_testbench_release/: run.bat  science_testbench.py
utils/teros_debug/: main.py  teros.debug.py
utils/teros_testbench/micropython_teros_testbench/: main.py
utils/teros_testbench/teros_testbench/: teros_testbench.ino
utils/teros_testbench_bluepill/: Software Downloads.docx  teros_testbench_bluepill.ino  ~$ftware Downloads.docx
utils/teros_testbench_bluepill/teros_testbench_bluepill/: teros_testbench_bluepill.ino
(+9 files in other folders)
